# dms_client

./: .gitignore  CMakeLists.txt
client/src/: client.cpp  socket_sender.cpp
include/: client.h  log_sender.h  socket_sender.h
src/: CMakeLists.txt  backup_exception.cpp  client_exception.cpp  console_sender.cpp  data.cpp  log_reader.cpp  log_sender.cpp  main.cpp  read_exception.cpp  save_exception.cpp  send_exception.cpp  socket_exception.cpp  socket_sender.cpp
